# arise_desktop

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  DELIVERY_README.md  DEPENDENCY_UPDATES.md  FEATURES.md  INSTALLATION_GUIDE.md  INSTALLATION_STEPS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SOURCE_CODE_EXAMPLES.md  TESTING_GUIDE.md  eslint.config.js  index.html  package-lock-resolution.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
arise-desktop-complete/: DELIVERY_README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: App.tsx  main.rs
src/styles/: App.css
