[package]
name = "arise-desktop"
version = "1.0.0"
description = "AI-Powered Video Wallpaper Application"
authors = ["Arise Desktop Team"]
license = "MIT"
repository = "https://github.com/yourusername/arise-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
directories = "5.0"
png = "0.17"

# CRITICAL FIX: Aligning windows crate with Tauri's internal version (0.52.0)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }
